kubernetes/app/dawarich/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-db
  namespace: dawarich
spec:
  clusterIP: None
  selector:
    app: dawarich-db
  ports:
    - port: 5432
      targetPort: 5432
