kubernetes/app/dawarich/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-redis
  namespace: dawarich
spec:
  selector:
    app: dawarich-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
